--- a/index.html
+++ b/index.html
@@ -1,54 +1,86 @@
-/*
- * Create a list that holds all of your cards
- */
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Matching Game</title>
+    <meta name="description" content="">
+    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+    <link rel="stylesheet" href="css/app.css">
+</head>
+<body>
 
+    <div class="container">
+        <header>
+            <h1>Matching Game</h1>
+        </header>
 
+        <section class="score-panel">
+            <ul class="stars">
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul>
 
+            <span class="moves">3</span> Moves
 
-const cards = [
-    "flag",
-    "bahamas",
-    "southSudan",
-    "canada",
-    "china",
-    "israel",
-    "japan",
-    "unitedKingdom"
-];
+            <div class="restart">
+                <i class="fa fa-repeat"></i>
+            </div>
+        </section>
 
+        <ul class="deck">
+            <li class="card">
+                <i><img id="flag" src="img/flag.png" alt="Black generic flag."></i>
+            </li>
+            <li class="card">
+                 <i><img id="bahamas" src="img/bahamas.png" alt="Bahama's flag"> </i>
+            </li>
+            <li class="card">
+                <i><img id="southSudan" src ="img/southSudan.png" alt="South Sudan's flag"> </i>
+            </li>
+            <li class="card">
+                <i><img id="canada" src="img/canada.png" alt="Canada's flag."></i>
+            </li>
+            <li class="card">
+                <i><img id="china" src="img/china.png" alt="China's flag."></i>
+            </li>
+            <li class="card">
+                <i><img id="southSudan" src ="img/southSudan.png" alt="South Sudan's flag"> </i>
+            </li>
+            <li class="card">
+                <i><img id="israel" src="img/israel.png" alt="Israel's flag."></i>
+            </li>
+            <li class="card">
+                <i><img id="japan" src="img/japan.png" alt="Japan's flag."></i>
+            </li>
+            <li class="card">
+                <i><img id="unitedKingdom" src="img/unitedKingdom.png" alt="United Kingdom's flag."></i>
+            </li>
+            <li class="card">
+                <i><img id="unitedKingdom" src="img/unitedKingdom.png" alt="United Kingdom's flag."></i>
+            </li>
+            <li class="card">
+                <i><img id="canada" src="img/canada.png" alt="Canada's flag."></i>
+            </li>
+            <li class="card">
+                <i><img id="australia" src="img/australia.png" alt="Australia's flag."></i>
+            </li>
+            <li class="card">
+                <i><img id="china" src="img/china.png" alt="China's flag."></i>
+            </li>
+            <li class="card">
+                 <i><img id="bahamas" src="img/bahamas.png" alt="Bahama's flag"> </i>
+            </li>
+            <li class="card">
+                <i><img id="israel" src="img/israel.png" alt="Israel's flag."></i>
+            </li>
+            <li class="card">
+                <i><img id="japan" src="img/japan.png" alt="Japan's flag."></i>
+            </li>
+        </ul>
+    </div>
 
-function shuffle(cards) {
-    var currentIndex = cards.length, temporaryValue, randomIndex;
-
-    while (currentIndex !== 0) {
-        randomIndex = Math.floor(Math.random() * currentIndex);
-        currentIndex -= 1;
-        temporaryValue = cards[currentIndex];
-        cards[currentIndex] = cards[randomIndex];
-        cards[randomIndex] = temporaryValue;
-    }
-
-    return cards;
-
-
-}
-
-
-for (const digit of cards) {
-
-    console.log(digit);
-}
-
-/*
-
-/*
- * Display the cards on the page
- *   - shuffle the list of cards using the provided "shuffle" method below
- *   - loop through each card and create its HTML
- *   - add each card's HTML to the page
- */
-
-// Shuffle function from http://stackoverflow.com/a/2450976
-
-
-
+    <script src="js/app.js"></script>
+</body>
+</html>
