--- a/index.html
+++ b/index.html
@@ -30,57 +30,58 @@
         </section>
 
         <ul class="deck">
-            <li class="card">
-                <i><img id="flag" src="img/flag.png" alt="Black generic flag."></i>
+            <li class="card card1">
+                <span class="cardSpan"></span>
+                <i class="fa fa-diamond"></i>
             </li>
-            <li class="card">
-                 <i><img id="bahamas" src="img/bahamas.png" alt="Bahama's flag"> </i>
+            <li class="card card2">
+                <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card">
-                <i><img id="southSudan" src ="img/southSudan.png" alt="South Sudan's flag"> </i>
+            <li class="card card3">
+                <i class="fa fa-anchor"></i>
             </li>
-            <li class="card">
-                <i><img id="canada" src="img/canada.png" alt="Canada's flag."></i>
+            <li class="card card4">
+                <i class="fa fa-bolt"></i>
             </li>
-            <li class="card">
-                <i><img id="china" src="img/china.png" alt="China's flag."></i>
+            <li class="card card5">
+                <i class="fa fa-cube"></i>
             </li>
-            <li class="card">
-                <i><img id="southSudan" src ="img/southSudan.png" alt="South Sudan's flag"> </i>
+            <li class="card card3">
+                <i class="fa fa-anchor"></i>
             </li>
-            <li class="card">
-                <i><img id="israel" src="img/israel.png" alt="Israel's flag."></i>
+            <li class="card card6">
+                <i class="fa fa-leaf"></i>
             </li>
-            <li class="card">
-                <i><img id="japan" src="img/japan.png" alt="Japan's flag."></i>
+            <li class="card card7">
+                <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card">
-                <i><img id="unitedKingdom" src="img/unitedKingdom.png" alt="United Kingdom's flag."></i>
+            <li class="card card1">
+                <i class="fa fa-diamond"></i>
             </li>
-            <li class="card">
-                <i><img id="unitedKingdom" src="img/unitedKingdom.png" alt="United Kingdom's flag."></i>
+            <li class="card card8">
+                <i class="fa fa-bomb"></i>
             </li>
-            <li class="card">
-                <i><img id="canada" src="img/canada.png" alt="Canada's flag."></i>
+            <li class="card card6">
+                <i class="fa fa-leaf"></i>
             </li>
-            <li class="card">
-                <i><img id="australia" src="img/australia.png" alt="Australia's flag."></i>
+            <li class="card card8">
+                <i class="fa fa-bomb"></i>
             </li>
-            <li class="card">
-                <i><img id="china" src="img/china.png" alt="China's flag."></i>
+            <li class="card card4">
+                <i class="fa fa-bolt"></i>
             </li>
-            <li class="card">
-                 <i><img id="bahamas" src="img/bahamas.png" alt="Bahama's flag"> </i>
+            <li class="card card7">
+                <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card">
-                <i><img id="israel" src="img/israel.png" alt="Israel's flag."></i>
+            <li class="card card2">
+                <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card">
-                <i><img id="japan" src="img/japan.png" alt="Japan's flag."></i>
+            <li class="card card5">
+                <i class="fa fa-cube"></i>
             </li>
         </ul>
     </div>
 
-    <script src="js/app.js"></ script>
+    <script src="js/app.js"></script>
 </body>
 </html>
