--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Matching Game</title>
+    <meta name="description" content="">
+    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+    <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
 
@@ -30,53 +39,53 @@
         </section>
 
         <ul class="deck">
-            <li class="card card1">
-                <span class="cardSpan"></span>
+
+            <li class="card" id="card1">
                 <i class="fa fa-diamond"></i>
             </li>
-            <li class="card card2">
+            <li class="card" id="card2">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card card3">
+            <li class="card" id="card3">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card card4">
+            <li class="card" id="card4">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card card5">
+            <li class="card" id="card5">
                 <i class="fa fa-cube"></i>
             </li>
-            <li class="card card3">
+            <li class="card" id="card3">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card card6">
+            <li class="card" id="card6">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card card7">
+            <li class="card" id="card7">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card card1">
+            <li class="card" id="card1">
                 <i class="fa fa-diamond"></i>
             </li>
-            <li class="card card8">
+            <li class="card" id="card8">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card card6">
+            <li class="card" id="card6">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card card8">
+            <li class="card" id="card8">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card card4">
+            <li class="card" id ="card4"">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card card7">
+            <li class="card" id="card7">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card card2">
+            <li class="card" id="card2">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card card5">
+            <li class="card" id="card5">
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
