--- a/index.html
+++ b/index.html
@@ -40,52 +40,52 @@
 
         <ul class="deck">
 
-            <li class="card" id="card1">
+            <li class="card card1" id="card1-1" >
                 <i class="fa fa-diamond"></i>
             </li>
-            <li class="card" id="card2">
+            <li class="card card2" id="card2-1" >
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card" id="card3">
+            <li class="card card3" id="card3-1">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card" id="card4">
+            <li class="card card4" id="card4-1">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card" id="card5">
+            <li class="card card5" id="card5-1">
                 <i class="fa fa-cube"></i>
             </li>
-            <li class="card" id="card3">
+            <li class="card card3" id="card3-2">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card" id="card6">
+            <li class="card card6" id="card6-1">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card" id="card7">
+            <li class="card card7" id="card7-1">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card" id="card1">
+            <li class="card card1" id="card1-2">
                 <i class="fa fa-diamond"></i>
             </li>
-            <li class="card" id="card8">
+            <li class="card card8" id="card8-1">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card" id="card6">
+            <li class="card card6" id="card6-2">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card" id="card8">
+            <li class="card card8" id="card8-1">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card" id ="card4"">
+            <li class="card card4" id="card4-2">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card" id="card7">
+            <li class="card card7" id="card7-2">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card" id="card2">
+            <li class="card card2" id="card2-2">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card" id="card5">
+            <li class="card card5" id="card5-2">
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
