--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </ul>
 
             <span class="moves"></span> Moves
-
+            <span class="timer"></span> Seconds
             <div class="restart">
                 <i class="fa fa-repeat"></i>
             </div>
